# quick-format-string

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: QFString.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_format.cc
